add resources folder in packet

--- a/Runtime/Resources/com.amaze.gridautolayout.Runtime.Resources.asmdef
+++ b/Runtime/Resources/com.amaze.gridautolayout.Runtime.Resources.asmdef
@@ -1,8 +1,6 @@
 {
-    "name": "com.amaze.gridautolayout.Runtime",
-    "references": [
-        "com.amaze.gridautolayout.Runtime.Resources"
-    ],
+    "name": "com.amaze.gridautolayout.Runtime.Resources",
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
