--- a/Runtime/com.amaze.gridautolayout.Runtime.asmdef
+++ b/Runtime/com.amaze.gridautolayout.Runtime.asmdef
@@ -1,7 +1,7 @@
 {
     "name": "com.amaze.gridautolayout.Runtime",
     "references": [
-        "com.amaze.gridautolayout.Runtime.Resources"
+        "GUID:7d49720cf8557574dac6f672e862995e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
